--- a/src/3d-project/index.html
+++ b/src/3d-project/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <script src="../node_modules/three/build/three.js"></script>
+        <script src="../../node_modules/three/build/three.js"></script>
         <script src="main.js"></script>
     </head>
     <body>
