落下速度アップ処理を追加

--- a/src/2d-project/index.html
+++ b/src/2d-project/index.html
@@ -4,7 +4,7 @@
         <title>テトリス</title>
     </head>
     <body>
-        <canvas id="canvas" width="600" height="600" style="background-color: beige;"></canvas>
+        <canvas id="canvas" width="600" height="600" style="background-color: black;"></canvas>
         <script src="main.js"></script>
     </body>
 </html>
