3dプロジェクトにフレームレート表示を追加

--- a/src/3d-project/index.html
+++ b/src/3d-project/index.html
@@ -2,9 +2,12 @@
     <head>
         <meta charset="UTF-8"/>
         <script src="../../node_modules/three/build/three.js"></script>
+        <script src="../../../demo/learning-three-js-2e-ja-support/libs/controls/OrbitControls.js"></script>
+        <script src="../../../demo/learning-three-js-2e-ja-support/libs/stats.js"></script>
         <script src="main.js"></script>
     </head>
     <body>
+        <div id="Stats-output"></div>
         <canvas id="myCanvas"></canvas>
     </body>
 </html>
